--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@
   text-decoration: none;
   list-style: none;
   font-family: "Poppins", sans-serif;
-  background-color: #edf6f9;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -25,4 +24,28 @@ html {
 
 ::-webkit-scrollbar {
   display: none;
+}
+
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-5px);
+  }
+  50% {
+    transform: translateX(0);
+  }
+  75% {
+    transform: translateX(5px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.animated {
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+  animation-name: shake;
 }
